--- a/main.css
+++ b/main.css
@@ -13,8 +13,21 @@
     src: url(assets/Lato-Bold.ttf);
 }
 
+@font-face {
+    font-family: LATOBLACK;
+    src: url(assets/Lato-Black.ttf);
+}
+
 .disable {
     /* nft websites can't figure this out when it took me a quick google search */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+br {    /* just makes it easier */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -43,6 +56,9 @@ body {
     overflow: overlay;
     overflow-x: hidden;
     cursor: default;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 
@@ -94,6 +110,7 @@ main {
     z-index: -5000;
     top: 0px;
     left: 0px;
+    text-align: center;
 }
 
 .header-menu-burger {
@@ -102,7 +119,7 @@ main {
     height: 2em;
     top: 0.25em;
     z-index: 5500;
-    transition-duration: 250ms;
+    transition-duration: 400ms;
 }
 
 .headermenu {
@@ -136,7 +153,7 @@ main {
 a {
     text-decoration: none;
     color: white;
-    transition-duration: 250ms;
+    transition-duration: 400ms;
 }
 
 a:hover {
@@ -157,7 +174,7 @@ a:hover {
 }
 
 #arowtm {
-    transition-duration: 250ms;
+    transition-duration: 400ms;
 }
 
 .sm-arrow:hover #arowtm {
@@ -173,3 +190,116 @@ crop??
     image-fit
 
 */
+
+.footer {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    background-color: #3b3b3b;
+    width: 100vw;
+    z-index: 100;
+    color: white;
+    height: auto;
+    min-height: 6rem;
+    display: flex;
+    padding-bottom: 0px;
+    flex-wrap: wrap;
+}
+
+.footer-logo {
+    height: 2.5rem;
+    margin: 0.35rem;
+    margin-left: 0px;
+}
+
+.footer-text {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    font-size: 1.25rem;
+}
+
+.coopyright {
+    margin-left: 0px;
+}
+
+.doecoin {
+    width: 3rem;
+    height: 3rem;
+    margin-top: 0.65rem;
+    margin-left: 0.35rem;
+}
+
+.push {
+    margin-left: auto;
+}
+
+.flexy {
+    display: flex;
+}
+
+.doecointext {
+    margin-top: 0.65rem;
+    margin-left: 0.35rem;
+    margin-right: 1.35rem;
+}
+
+.title-main {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    animation-duration: 0.4s;
+}
+
+
+.title-main-img {
+    height: 6rem;
+}
+
+.short-bio {
+    font-size: 2rem;
+}
+
+.socials {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+@keyframes title-bloop {
+    0% { transform: translateY(0px) }
+    /*45% { transform: translateY(-100px) }*/
+    50% { transform: translateY(-100px) }
+    80% { transform: translateY(20px) }
+    90% { transform: translateY(5px) }
+    100% { transform: translateY(0px) }
+}
+
+.footer-thank {
+    font-size: 1.25rem;
+    margin-top: 0.35rem;
+    margin-bottom: 0.5rem;
+}
+
+.ftl {
+    width: 2.25rem;
+    margin-left: 0.35rem;
+    transition-duration: 400ms;
+    fill: white;
+}
+
+.ftl:hover {
+    fill: #e4e4e4;
+}
+
+.footerdiv {
+    transition-property: margin;
+    transition-duration: 1s;
+    margin-left: 0.35rem;
+}
